--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </div>
     </section>
 
-    <!-- Portfolio Grid -->
+    <!-- Portfolio Grid 
     <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
@@ -204,9 +204,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
-    <!-- About -->
+    <!-- About 
     <section id="about">
       <div class="container">
         <div class="row">
@@ -285,10 +285,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!-- Team -->
-    <section class="bg-light" id="team">
+    <!--<section class="bg-light" id="team">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -376,10 +376,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!-- Clients -->
-    <section class="py-5">
+    <!--<section class="py-5">
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-6">
@@ -404,10 +404,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!-- Contact -->
-    <section id="contact">
+   <section id="contact">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
