--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="NewCreativeGraphic" content="">
 
-    <title>Agency - Start Bootstrap Theme</title>
+    <title>Led Center Costa Rica</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -108,7 +108,7 @@
       </div>
     </section>
 
-    <!-- Portfolio Grid 
+    <!-- Portfolio Grid -->
     <section class="bg-light" id="portfolio">
       <div class="container">
         <div class="row">
@@ -204,7 +204,7 @@
           </div>
         </div>
       </div>
-    </section>-->
+    </section>
 
     <!-- About 
     <section id="about">
@@ -411,8 +411,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Contáctenos</h2>
+            <h3 class="section-subheading text-muted">Es un plaver antenderle.</h3>
           </div>
         </div>
         <div class="row">
