--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x text-primary"></i>
-              <i class="fa fa-lightbulb-o  fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-leaf  fa-stack-1x fa-inverse"></i>
               
             </span>
-            <h4 class="service-heading">Mayor brillo</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <h4 class="service-heading">Iluminación Ecológica</h4>
+            <p class="text-muted">La llaman iluminación ecológica porque no utiliza mercurio o gases que producen efecto invernadero e incrementan el calentamiento global.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
