--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-
+    <!--http://www.luzfin.com/-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -39,13 +39,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav text-uppercase ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Servicios</a>
+              <a class="nav-link js-scroll-trigger" href="#leds">LEDs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#portfolio">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#team">Nosotros</a>
+              <a class="nav-link js-scroll-trigger" href="#aboutUS">Nosotros</a>
             </li>
             <!--<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#team">Team</a>
@@ -64,18 +64,19 @@
         <div class="intro-text">
           <div class="intro-lead-in">Bienvenidos</div>
           <div class="intro-heading text-uppercase"><img class="logoHome" src="img/logos/logoLedCenterBlanco.svg" alt=""></div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Catalogo</a>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#leds">Catalogo</a>
         </div>
       </div>
     </header>
 
-    <!-- Services -->
-    <section id="services">
+    <!-- leds -->
+    <section id="leds">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Leds</h2>
-            <h3 class="section-subheading text-muted">La mejor opción en iluminación.</h3>
+            <h3 class="section-subheading text-muted">La mejor opción en iluminación recidencial, comercial e indutrial</h3>
+            
           </div>
         </div>
         <div class="row text-center">
@@ -94,7 +95,7 @@
               <i class="fa fa-clock-o fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Mayor duración</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">Pos su construcción las luces LED permiten que su duración oscile las <strong>50 000</strong> horas de vida.Tiempo en el que tendrías que cambiar una bombilla tradicional 42 veces</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -102,7 +103,7 @@
               <i class="fa fa-usd fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Economía</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">Los LED ocupan el primer lugar en eficiencia a la hora de producir luz, ahorran al rededor de un 80% en comparación a las luces tradicionas.</p>
           </div>
         </div>
       </div>
@@ -288,7 +289,7 @@
     </section>-->
 
     <!-- Team -->
-   <section class="bg-light" id="team">
+   <section class="bg-light" id="aboutUS">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
@@ -296,12 +297,17 @@
             <div class="team-member">
                 <h2 class="section-heading text-uppercase">Nosotros</h2>
               <img class="mx-auto" src="img/logos/logoLedCenter.svg" alt="">
-              <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+              <p class="text-muted">En led center nos especializamos en distribuir de iluminación Led, y conscientes de que la tecnología LED ha
+                revolucionado el mundo de la iluminación en los últimos años, vamos de la mano con el progreso, la evolución,
+                la innovación y la calidad, lo que nos permite ir un paso más allá y ofrecer las mejores soluciones de última
+                generación en brindar lo mejor de la iluminación para la industria comercio y vivienda, con las mejores tecnologías
+                de vanguardia.
+              </p>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-sm-6">
+          <!--<div class="col-sm-6">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/1.png" alt="">
               <h4>Misión</h4>
@@ -314,7 +320,7 @@
               <h4>Visión</h4>
               <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </section>
@@ -450,7 +456,33 @@
                   <!-- Project Details Go Here -->
                   <h2 class="text-uppercase">Bombillos Led</h2>
                   <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                  <img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">
+                  <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
+                  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="img/portfolio/01-full.png" alt="First slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="img/portfolio/02-full.png" alt="Second slide">
+                      </div>
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="img/portfolio/03-full.png" alt="Third slide">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
                   <!--<ul class="list-inline">
                     <li>Date: January 2017</li>
