--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               <i class="fa fa-clock-o fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Mayor duración</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+            <p class="text-muted">Larga vida útil de hasta 50 000hrs. </p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
