--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="intro-heading text-uppercase">
           <img class="logoHome" src="img/logos/logoLedCenterBlanco.svg" alt="">
         </div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#leds">Catálogo</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="catalogo/CatalogoLedCenterCR.pdf" download>Catálogo  <img src="img/download.svg" class="downImg"></a>
       </div>
     </div>
   </header>
@@ -116,7 +116,7 @@
             a las luces tradicionas.</p>
         </div>
       </div>
-      <div class="row text-center">
+      <div class="row text-center  leds-description">
         <p class="text-muted">Aprovecha los beneficios de la luz LED y ahorra energía, son muy duraderos y una gran opción para iluminar tu hogar o negocio. Despreocúpate por el gasto de luz y de cambiar tus focos constantemente.</p>
       </div>
     </div>
@@ -218,8 +218,8 @@
         </div>
       </div>
       <div class="row text-center">
-          <p class="text-muted">Revisa nuestro catálogo y encuentra los productos de Focos LED que buscas, conoce la gran variedad de artículos que tenemos para ti, sólo elige el que mejor se adapte a tus propósitos. </p>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger btn-download" href="#leds">Catálogo</a>
+          <p class="text-muted">Revisa nuestro catálogo y encuentra los productos LED que buscas, conoce la gran variedad de artículos que tenemos para vos, sólo elige el que mejor se adapte a tus propósitos. </p>
+          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger btn-download" href="catalogo/CatalogoLedCenterCR.pdf" download>Catálogo<img src="img/download.svg" class="downImg"></a>
         </div>
     </div>
   </section>
