--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
+  <link rel="shortcut icon" href="img/logos/icono" />
   <link href="css/agency.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 
