--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
         <div class="intro-heading text-uppercase">
           <img class="logoHome" src="img/logos/logoLedCenterBlanco.svg" alt="">
         </div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="catalogo/CatalogoLedCenterCR.pdf" download>Catálogo  <img src="img/download.svg" class="downImg"></a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" target="_blank" href="https://drive.google.com/open?id=17JvvOiCuHqVMttBV0QtCVMx8l2nisr3u"
+          download>Catálogo
+          <img src="img/download.svg" class="downImg">
+        </a>
       </div>
     </div>
   </header>
@@ -118,14 +121,15 @@
         </div>
       </div>
       <div class="row text-center  leds-description">
-        <p class="text-muted">Aprovecha los beneficios de la luz LED y ahorra energía, son muy duraderos y una gran opción para iluminar tu hogar o negocio. Despreocúpate por el gasto de luz y de cambiar tus focos constantemente.</p>
+        <p class="text-muted">Aprovecha los beneficios de la luz LED y ahorra energía, son muy duraderos y una gran opción para iluminar tu hogar
+          o negocio. Despreocúpate por el gasto de luz y de cambiar tus focos constantemente.</p>
       </div>
     </div>
   </section>
 
   <!-- Portfolio Grid -->
   <section class="bg-light" id="portfolio">
-    <div class="container">  
+    <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Productos</h2>
@@ -143,7 +147,7 @@
             <img class="img-fluid bulbs" src="img/portfolio/01-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>Bombillas LED</h4>
+            <h4>Bombillos LED</h4>
             <p class="text-muted"></p>
           </div>
         </div>
@@ -219,9 +223,13 @@
         </div>
       </div>
       <div class="row text-center">
-          <p class="text-muted">Revisa nuestro catálogo y encuentra los productos LED que buscas, conoce la gran variedad de artículos que tenemos para vos, sólo elige el que mejor se adapte a tus propósitos. </p>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger btn-download" href="catalogo/CatalogoLedCenterCR.pdf" download>Catálogo<img src="img/download.svg" class="downImg"></a>
-        </div>
+        <p class="text-muted">Revisa nuestro catálogo y encuentra los productos LED que buscas, conoce la gran variedad de artículos que tenemos
+          para vos, sólo elige el que mejor se adapte a tus propósitos. </p>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger btn-download" target="_blank" href="https://drive.google.com/open?id=17JvvOiCuHqVMttBV0QtCVMx8l2nisr3u"
+          download>Catálogo
+          <img src="img/download.svg" class="downImg">
+        </a>
+      </div>
     </div>
   </section>
 
@@ -315,11 +323,10 @@
           <div class="team-member">
             <h2 class="section-heading text-uppercase">Conócenos</h2>
             <img class="mx-auto" src="img/logos/logoLedCenter.svg" alt="">
-            <p class="text-muted">En led center nos especializamos en distribuir de iluminación Led, y conscientes de que la tecnología LED ha
-              revolucionado el mundo de la iluminación en los últimos años, vamos de la mano con el progreso, la evolución,
-              la innovación y la calidad, lo que nos permite ir un paso más allá y ofrecer las mejores soluciones de última
-              generación en brindar lo mejor de la iluminación para la industria comercio y vivienda, con las mejores tecnologías
-              de vanguardia.
+            <p class="text-muted">En led center nos especializamos en a distribución de luminarias Led, y conscientes que la tecnología ha evolucionado
+              el mundo de la iluminación, vamos de la mano con el progreso, la evolución, la innovación y la calidad, ello
+              nos permite ir un paso más allá y ofrecer las mejores soluciones de última generación para la industria, el
+              comercio y vivienda.
             </p>
           </div>
         </div>
@@ -416,13 +423,25 @@
       <div class="row">
         <div class="col-sm-6 mx-auto text-center">
           <p class="ubi textContact">
-            <i class="fa fa-map-marker"></i> Av 10, Calle 8 frente al Parqueo del AYA,
+            <i class="fa fa-map-marker"></i> Av 10, entre Calle 7 y 9 frente al Parqueo del AYA,
             <br> San Jose Costa Rica.</p>
 
         </div>
         <div class="col-sm-6 mx-auto text-center">
           <p class="tel textContact">
             <i class="fa fa-phone"></i> 2221 - 3882 / 8806 - 6789</p>
+
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 mx-auto text-center">
+          <p class="ubi textContact">
+            <i class="fa fa-map-marker"></i> Curridabat, frente a Multiplaza del Este, contiguo a Almacén El Rey.</p>
+
+        </div>
+        <div class="col-sm-6 mx-auto text-center">
+          <p class="tel textContact">
+            <i class="fa fa-phone"></i> 2253 - 3998 / 8806 - 6789</p>
 
         </div>
       </div>
@@ -475,7 +494,7 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Bombillas Led</h2>
+                <h2 class="text-uppercase">Bombillos Led</h2>
                 <p class="item-intro text-muted">Calidad, eficiencia y economía.</p>
                 <!--<img class="img-fluid d-block mx-auto" src="img/portfolio/01-full.jpg" alt="">-->
                 <div id="carouselExampleSlidesOnly" class="bulbsC carousel slide" data-ride="carousel">
@@ -506,8 +525,8 @@
                     </div>
                   </div>
                 </div>
-                <p>Contamos con un amplio stock de bombillas led de diferentes tamaños, formas y colores, para solventar cualquier
-                  necesidad o exigencia de nuestros clientes. Tenemos bombillas para la iluminación de su hogar, negocio
+                <p>Contamos con un amplio stock de bombillos led de diferentes tamaños, formas y colores, para solventar cualquier
+                  necesidad o exigencia de nuestros clientes. Tenemos bombillos para la iluminación de su hogar, negocio
                   y oficina, además de gran variedad de productos decorativos, con los cuales podrá explotar su imaginación
                   dándole vida a esos lugares especiales.</p>
                 <!--<ul class="list-inline">
@@ -733,11 +752,12 @@
                 </div>
                 <p>
                   Encuentra Tiras de LED de excelente calidad para que le des color a tu casa, fiesta o cualquier lugar. Además de los controladores
-                  y accesorios necesarios que te ayudarán a iluminar ese espacio que no tiene color.<br> Aquí tenemos el material
-                  que necesitas para hacer proyectos de iluminación. Encuentra tiras LED en colores blanco y multicolor (RGB)
-                  de 5 metros, o mangueras de hasta 100 metros para que no limites la extensión de tu instalación lumínica.
-                  Son flexibles y cuentan con material adherible para que puedas colocarlas en cualquier superficie como
-                  ventanas, aparadores y hasta madera. Su cubierta ayuda a protegerlas de la lluvia y el polvo.
+                  y accesorios necesarios que te ayudarán a iluminar ese espacio que no tiene color.
+                  <br> Aquí tenemos el material que necesitas para hacer proyectos de iluminación. Encuentra tiras LED en colores
+                  blanco y multicolor (RGB) de 5 metros, o mangueras de hasta 100 metros para que no limites la extensión
+                  de tu instalación lumínica. Son flexibles y cuentan con material adherible para que puedas colocarlas en
+                  cualquier superficie como ventanas, aparadores y hasta madera. Su cubierta ayuda a protegerlas de la lluvia
+                  y el polvo.
                 </p>
                 <!--<ul class="list-inline">
                     <li>Date: January 2017</li>
@@ -793,10 +813,11 @@
                   </div>
                 </div>
                 <p>Desde lámparas de techo, pared, mesa hasta lámparas colgantes, encuentra la lámpara de perfecta para cada
-                  estancia.<br> Las Lámparas decorativas son indicadas para crear elegantes ambientes en lugares como el hogar
-                  y comercios. Con el fin de crear un ambiente acogedor, innovador o étnico. Los salones de nuestras viviendas
-                  por ejemplo, son las zonas con mayores horas de uso. En ellos podemos jugar con diferentes tipos de lámparas
-                  con el fin de conseguir llamar la atención dentro de un mismo espacio.
+                  estancia.
+                  <br> Las Lámparas decorativas son indicadas para crear elegantes ambientes en lugares como el hogar y comercios.
+                  Con el fin de crear un ambiente acogedor, innovador o étnico. Los salones de nuestras viviendas por ejemplo,
+                  son las zonas con mayores horas de uso. En ellos podemos jugar con diferentes tipos de lámparas con el
+                  fin de conseguir llamar la atención dentro de un mismo espacio.
                 </p>
                 <!--<ul class="list-inline">
                     <li>Date: January 2017</li>
